--- a/CleanBlog/views/edit.ejs
+++ b/CleanBlog/views/edit.ejs
@@ -51,8 +51,8 @@
   <%- include("partials/_footer") -%>
 
   <!-- Contact Form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
+  <script src="/js/jqBootstrapValidation.js"></script>
+  <script src="/js/contact_me.js"></script>
 
 </body>
 
